--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
-	"owner": ["6282387804410@s.whatsapp.net"],
-	"thumbvideo": "http://fzcdn.cf/file/MlIffJXpr01~aGq2NSE~.mp4",
-	"thumb": "https://telegra.ph/file/d8dba7eee759ff82b35be.jpg",
-	"session": "rzkyfdlh-md.json",
-	"ownername": "Rizky",
+	"owner": ["6282196930963@s.whatsapp.net"],
+	"thumbimage": "https://pbs.twimg.com/media/FXZB4JmagAAIn-V?format=jpg&name=large",
+	"thumb": "https://pbs.twimg.com/media/FWg8fTBUEAA2VEy?format=jpg&name=large",
+	"session": "session.json",
+	"ownername": "RizFurr",
 	"self": false,
 	"server": false,
 	"comment_server": "change 'server' with 'true', if you run in replit!",
 	"limit": { "limitUser": 30, "gameLimitUser": 10, "gameLimitPremium": 30 },
-	"packInfo": { "packname": "@rizkyfadilah8", "author": "6282387804410" },
-	"namebot": "KurumiBot",
+	"packInfo": { "packname": "TrashBot", "author": "@Rizz~" },
+	"namebot": "TrashBot",
 	"timezone": "Asia/Jakarta",
-	"email": "admin@rzkyfdlh.tech",
-	"instagram": "https://instagram.com/rizkyfadilah8_",
+	"email": "admin@rizfurr.ml",
+	"instagram": "https://instagram.com/prodbyfxntvsy",
 	"locale": "id",
 	"ignore": {
 		"directory": ["umum"]
