--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"owner": ["6282196930963@s.whatsapp.net"],
+	"owner": ["6282196930963@s.whatsapp.net", "62882003806038@s.whatsapp.net"],
 	"thumbimage": "https://pbs.twimg.com/media/FXZB4JmagAAIn-V?format=jpg&name=large",
 	"thumb": "https://pbs.twimg.com/media/FWg8fTBUEAA2VEy?format=jpg&name=large",
 	"session": "session.json",
