--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "country-language": "^0.1.7",
     "delay": "^5.0.0",
     "emoji-from-text": "^1.1.12",
+    "express": "^4.18.1",
     "fake-useragent": "^1.0.1",
     "figlet": "^1.5.2",
     "file-type": "16.5.3",
@@ -47,10 +48,13 @@
     "node-fetch": "^2.0.0",
     "parse-ms": "^2.1.0",
     "pdfkit": "^0.12.1",
+    "pet-pet-gif": "^1.0.9",
     "prettier": "^2.6.2",
     "qrcode": "^1.5.0",
+    "rizfurr-api": "^1.3.1",
     "similarity": "^1.2.1",
     "spinnies": "^0.5.1",
+    "spotifydl-core": "^0.2.0",
     "string-crypto": "^2.0.2",
     "wikijs": "^6.3.3",
     "yt-search": "^2.10.3"
