--- a/config.json
+++ b/config.json
@@ -5,13 +5,11 @@
 	"session": "session.json",
 	"ownername": "RizFurr",
 	"self": false,
-	"server": false,
-	"comment_server": "change 'server' with 'true', if you run in replit!",
 	"limit": { "limitUser": 30, "gameLimitUser": 10, "gameLimitPremium": 30 },
 	"packInfo": { "packname": "TrashBot", "author": "@Rizz~" },
 	"namebot": "TrashBot",
 	"timezone": "Asia/Jakarta",
-	"email": "admin@rizfurr.ml",
+	"email": "rizzowohq@gmail.com",
 	"instagram": "https://instagram.com/prodbyfxntvsy",
 	"locale": "id",
 	"ignore": {
